--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,11 @@
         }
     },
     "require": {
-        "php": "~7.2"
+        "php": "~7.2",
+        "beberlei/assert": "^3.3",
+        "ferno/loco": "dev-main",
+        "nette/utils": "^3.2",
+        "ramsey/uuid": "^4.1"
     },
     "require-dev": {
         "brandembassy/coding-standard": "^8.1",
