add tests for operators

--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,8 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "BrandEmbassy\\QueryLanguageParser\\": "src",
-            "BrandEmbassy\\QueryLanguageParser\\Examples\\": "examples"
+            "BrandEmbassy\\QueryLanguageParser\\Examples\\": "examples",
+            "BrandEmbassy\\QueryLanguageParser\\": "src"
         }
     },
     "require": {
