--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,16 @@
 name: CI
 
-on: [pull_request]
+on: [pull_request, workflow_dispatch]
 
 jobs:
-  build:
+  phpstan:
+    name: CI PHPStan
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        php-version:
+          - 7.4
+          - 8.0
 
     steps:
       - name: Checkout
@@ -13,8 +19,7 @@ jobs:
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: 7.4
-          coverage: xdebug
+          php-version: ${{ matrix.php-version }}
 
       - name: Get composer cache directory
         id: composercache
@@ -28,13 +33,81 @@ jobs:
           restore-keys: ${{ runner.os }}-composer-
 
       - name: Install dependencies
-        run: composer install --no-progress --prefer-dist --optimize-autoloader
+        run: composer install --prefer-dist
 
       - name: Run phpstan
         run: composer phpstan
 
+
+  phpcs:
+    name: CI Code sniffer
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        php-version:
+          - 7.4
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: ${{ matrix.php-version }}
+
+      - name: Get composer cache directory
+        id: composercache
+        run: echo "::set-output name=dir::$(composer config cache-files-dir)"
+
+      - name: Cache composer dependencies
+        uses: actions/cache@v2
+        with:
+          path: ${{ steps.composercache.outputs.dir }}
+          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
+          restore-keys: ${{ runner.os }}-composer-
+
+      - name: Install dependencies
+        run: composer install --prefer-dist
+
       - name: Run code-sniffer
         run: composer phpcs
 
-      - name: Run phpunit
-        run: composer phpunit
+
+  phpunit:
+    name: CI Tests
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        composer-arg:
+          - "install"
+          - "update --prefer-lowest"
+        php-version:
+          - 7.4
+          - 8.0
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: ${{ matrix.php-version }}
+
+      - name: Get composer cache directory
+        id: composercache
+        run: echo "::set-output name=dir::$(composer config cache-files-dir)"
+
+      - name: Cache composer dependencies
+        uses: actions/cache@v2
+        with:
+          path: ${{ steps.composercache.outputs.dir }}
+          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
+          restore-keys: ${{ runner.os }}-composer-
+
+      - name: Install dependencies
+        run: composer ${{ matrix.composer-arg }} --prefer-dist
+
+      - name: Run tests
+        run: composer test
