Fix sonar qube integration

--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "phpunit": "./vendor/bin/phpunit src --no-coverage",
         "phpunit-cc": "./vendor/bin/phpunit src",
         "test": "./vendor/bin/phpunit src"
+	"test-with-coverage": "php -dxdebug.mode=coverage ./vendor/bin/phpunit src --coverage-clover=coverage.xml --log-junit=test-report.xml"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
